arreglo de querys reportes?