@@ -1,5 +1,7 @@
 package com.gpadilla.mycar.service;
 
+import com.gpadilla.mycar.dtos.reportes.RecaudacionAbiertosRow;
+import com.gpadilla.mycar.dtos.reportes.RecaudacionCerradosRow;
 import com.gpadilla.mycar.dtos.reportes.ReporteRecaudacionDto;
 import com.gpadilla.mycar.dtos.reportes.ReporteVehiculosDto;
 import com.gpadilla.mycar.pdf.PdfGenerator;
@@ -8,6 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDate;
+import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -20,7 +23,16 @@ public class ReporteService {
     private final PdfGenerator pdfGenerator;
 
     public byte[] generarReporteVehiculos(LocalDate fechaInicio, LocalDate fechaFin) {
-        List<ReporteVehiculosDto> vehiculos = reporteRepository.findVehiculosAlquiladosPorFechas(fechaInicio, fechaFin);
+        List<ReporteVehiculosDto> vehiculosRaw =
+                reporteRepository.findVehiculosAlquiladosPorFechas(fechaInicio, fechaFin);
+
+        // ✅ Calcular los días alquilados en Java (portátil y sin errores)
+        List<ReporteVehiculosDto> vehiculos = vehiculosRaw.stream()
+                .peek(v -> {
+                    long dias = ChronoUnit.DAYS.between(v.getFechaDesde(), v.getFechaHasta()) + 1;
+                    v.setDiasAlquilado((int) dias);
+                })
+                .toList();
 
         return pdfGenerator.generarReporteVehiculosAlquilados(
                 fechaInicio, fechaFin, vehiculos
@@ -28,40 +40,51 @@ public class ReporteService {
     }
 
 
-
     public byte[] generarReporteRecaudacion(LocalDate fechaInicio, LocalDate fechaFin) {
 
-        List<Object[]> resultados = reporteRepository.reporteRecaudacion(fechaInicio, fechaFin);
+        // 1️⃣ Consultas separadas
+        List<RecaudacionCerradosRow> cerradosRows = reporteRepository.recaudacionCerrados(fechaInicio, fechaFin);
+        List<RecaudacionAbiertosRow> abiertosRows = reporteRepository.recaudacionAbiertos(fechaInicio, fechaFin);
 
-        List<ReporteRecaudacionDto> reportes = resultados.stream()
+        // 2️⃣ Convertir a DTOs de presentación
+        List<ReporteRecaudacionDto> cerrados = cerradosRows.stream()
                 .map(r -> new ReporteRecaudacionDto(
-                        (String) r[0],                                 // modelo
-                        r[1] != null ? ((Number) r[1]).longValue() : 0L,   // cantidadCerrados
-                        r[2] != null ? ((Number) r[2]).doubleValue() : 0.0, // totalCerrados
-                        r[3] != null ? ((Number) r[3]).doubleValue() : 0.0  // totalAbiertos
+                        r.modelo(),
+                        r.cantidad() != null ? r.cantidad() : 0L,
+                        r.total() != null ? r.total() : 0.0,
+                        0.0
                 ))
-                .collect(Collectors.toList());
+                .toList();
 
-        List<ReporteRecaudacionDto> cerrados = new ArrayList<>();
-        List<ReporteRecaudacionDto> abiertos = new ArrayList<>();
+        // 🔹 Calcular el total abierto según la duración y costo/día
+        List<ReporteRecaudacionDto> abiertos = abiertosRows.stream()
+                .map(r -> {
+                    long dias = ChronoUnit.DAYS.between(
+                            r.desde().isBefore(fechaInicio) ? fechaInicio : r.desde(),
+                            r.hasta().isAfter(fechaFin) ? fechaFin : r.hasta()
+                    ) + 1;
 
-        for (ReporteRecaudacionDto dto : reportes) {
-            boolean tieneCerrados = dto.getTotalCerrados() != null && dto.getTotalCerrados() > 0;
-            boolean tieneAbiertos = dto.getTotalAbiertos() != null && dto.getTotalAbiertos() > 0;
+                    double totalAbierto = dias * (r.costoPorDia() != null ? r.costoPorDia() : 0.0);
 
-            if (tieneCerrados) cerrados.add(dto);
-            if (tieneAbiertos) abiertos.add(dto);
-        }
+                    return new ReporteRecaudacionDto(
+                            r.modelo(),
+                            0L,
+                            0.0,
+                            totalAbierto
+                    );
+                })
+                .toList();
 
+        // 3️⃣ Calcular totales globales
         double totalCerrados = cerrados.stream()
-                .mapToDouble(r -> r.getTotalCerrados() != null ? r.getTotalCerrados() : 0)
+                .mapToDouble(ReporteRecaudacionDto::getTotalCerrados)
                 .sum();
 
         double totalAbiertos = abiertos.stream()
-                .mapToDouble(r -> r.getTotalAbiertos() != null ? r.getTotalAbiertos() : 0)
+                .mapToDouble(ReporteRecaudacionDto::getTotalAbiertos)
                 .sum();
 
-
+        // 4️⃣ Generar PDF (exactamente igual que antes)
         return pdfGenerator.generarReporteRecaudacionConDetalle(
                 fechaInicio, fechaFin, cerrados, abiertos, totalCerrados, totalAbiertos
         );
